fixed footer mobile align and breakpoint

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -126,13 +126,17 @@ footer {
     padding-right: 0px;
 }
 
-@media screen and (max-width : 1000px) {
+@media screen and (max-width : 985px) {
     .left-footer {
-
+        
     }
 
     .center-footer {
         text-align: left !important;
+
+    }
+
+    .center-footer ul {
         -webkit-padding-start: 40px !important;
     }
 
